# opensim-nextgen

./: .env.example  .gitignore  API_ENDPOINTS.md  ARCHITECTURE.md  ARCHITECTURE_GLOSSARY.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATABASE_ARCHITECTURE.md  LICENSE  README.md  TABLE_OF_CONTENTS.md  USER_MANUAL.md  instances.toml  opensim_next_grid.xml
flutter-client/opensim_configurator/rust/: Cargo.toml
rust/: .gitignore  Cargo.toml  build.rs  check_logs_clean.sh  check_server.sh  create_mariadb_schema.sql  deploy_frontend.sh  enhanced_server_monitor.sh  monitor_server.sh  npc_behaviors.toml  opensim-config.toml  opensim_schema.sql  opensim_schema_hybrid.sql  quick_start.sh  region_handshake_capture.pcap  setup_mariadb.sql  simple_admin_proxy.py  stable_server_start.sh  start_server.sh  start_with_monitoring.sh  test_db_detection.rs  test_login_clean.sh  test_multi_db.rs  test_server_startup.sh
rust/assets/: c5f87150-3967-446d-aed6-06fbd3454d11.asset
rust/config/: OpenSim.ini
rust/config/Regions/: Regions.ini
rust/config/config-include/: ScriptConfig.ini
rust/database/: POSTGRESQL_INT4_FIX_TEMPLATE.sql
rust/examples/: multi_physics_demo.rs  phase15_zero_trust_monitoring_demo.rs  phase33a_universal_client_demo.rs  phase34_enterprise_grid_demo.rs  phase35_analytics_demo.rs  ziti_service_communication_demo.rs  ziti_zero_trust_demo.rs
rust/migrations/mysql/: 001_initial_schema.sql  002_opensim_master_compatibility.sql  003_regionstore_complete.sql  004_social_systems_complete.sql  005_regionstore_advanced.sql  006_complete_stores.sql  007_extended_features.sql  008_ai_learning_patterns.sql  009_primitems_table.sql  010_landaccesslist_table.sql  011_inventory_defaults_fix.sql  012_economy_tables.sql
rust/migrations/postgres/: 001_initial_schema.sql  002_opensim_master_compatibility.sql  003_regionstore_complete.sql  004_social_systems_complete.sql  005_advanced_stores_complete.sql  006_complete_stores_final.sql  007_extended_features_complete.sql  008_ai_learning_patterns.sql  009_fix_wearable_inventory_items.sql  010_primitems_table.sql  011_landaccesslist_table.sql  012_economy_tables.sql
rust/migrations/sqlite/: 001_initial_schema.sql
rust/scripts/: populate_cof_links.sql
rust/shaders/: vr_pixel.hlsl  vr_vertex.hlsl
rust/src/: config.rs  lib.rs  login_service.rs  login_session.rs  login_stage_tracker.rs  login_state.rs  main.rs  readiness.rs  xmlrpc_login_response.rs
rust/src/ai/: action_planner.rs  assistant_avatar.rs  avatar_intelligence.rs  badge_communicator.rs  behavior_config.rs  behavior_engine.rs  behaviors.rs  build_session.rs  cinematography.rs  collaborative_filtering.rs  content_creation.rs  content_generation.rs  content_validator.rs  eads_learning.rs  galadriel.rs  image_to_build.rs  inventory_search.rs  mod.rs  movement_controller.rs  npc_avatar.rs  npc_behavior.rs  npc_dialogue.rs  npc_memory.rs  npc_roster.rs  oar_analyzer.rs  pattern_repository.rs  performance_ml.rs  performance_profiling.rs  predictive_analytics.rs  prompt_generator.rs  script_templates.rs  skill_engine.rs  skill_modules.rs  style_transfer.rs  user_feedback.rs  vehicle_builder.rs  vehicle_recipes.rs  vehicle_scripts.rs
rust/src/analytics/: business_intelligence.rs  dashboard.rs  data_collection.rs  export.rs  mod.rs  predictive_analytics.rs  reporting.rs
rust/src/archives/: api.rs  common.rs  job_manager.rs  mod.rs  tar_handler.rs  tests.rs
rust/src/asset/: asset_loader.rs  cache.rs  cdn.rs  deduplication.rs  fsassets.rs  fsassets_fetch.rs  fsassets_migrate.rs  jpeg2000.rs  mod.rs  mod_backup.rs  persistence.rs  storage.rs  streaming.rs  types.rs
rust/src/auth/: password.rs
rust/src/avatar/: api.rs  appearance.rs  behavior.rs  factory.rs  manager.rs  mod.rs  persistence.rs  persistence_stub.rs  social.rs  social_stub.rs
rust/src/baking/: baker.rs  cache.rs  managed_image.rs  mod.rs  static_assets.rs  types.rs
rust/src/capabilities/: handlers.rs  mod.rs  registry.rs  seed.rs
rust/src/caps/: event_queue.rs  handlers.rs  mod.rs  router.rs
rust/src/client_sdk/: api_schema.rs  csharp_sdk.rs  debugging_tools.rs  documentation_generator.rs  generator.rs  go_sdk.rs  java_sdk.rs  javascript_sdk.rs  mod.rs  performance_profiler.rs  php_sdk.rs  python_sdk.rs  ruby_sdk.rs  rust_sdk.rs  testing_framework.rs
rust/src/community/: content_moderation.rs  developer_portal.rs  forums.rs  knowledge_base.rs  mod.rs  user_management.rs
rust/src/config/: login.rs
rust/src/configuration_builder/: deployment.rs  grid_generator.rs  ini_generator.rs  mod.rs  models.rs  templates.rs  validator.rs
rust/src/content/: analytics.rs  creation.rs  distribution.rs  import.rs  manager.rs  marketplace.rs  mod.rs  security.rs  validation.rs  versioning.rs
rust/src/database/: admin_operations.rs  connection.rs  default_inventory.rs  initialization.rs  inventory.rs  migration_engine.rs  migration_manager.rs  (+5 more)
rust/tests/: admin_api_integration_test.rs  avatar_service_integration.rs  circuit_code_test.rs  phase19_database_validation.rs  phase19_standalone_test.rs  phase22_2_region_admin_test.rs  phase24_1_avatar_system_test.rs  phase24_3_social_features_test.rs  phase25_core_test.rs  phase25_database_restoration_test.rs  phase66_16_login_integration_test.rs  physics_test.rs  quick_integration_test.rs  robust_integration.rs  terrain_integration_test.rs  udp_server_integration_test.rs
rust/web-frontend/: index.html
(+772 files in other folders)
