[workspace]
members = [
    "rust",
    "tools/rust-analyzer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenSim Contributors"]
description = "Next generation OpenSim server with Rust and Zig"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
bytes = "1.5"
lru = "0.12"
parking_lot = "0.12"

# 3D math (used by glc-core/glc-io)
glam = { version = "0.29", features = ["serde", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"

# FFI
libc = "0.2"
libloading = "0.8"

# Testing
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.10" 
